PR/51043: Yorick Hardy: ftp(1) should use the port number for CONNECT